--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         >Pedro Xavier Coelho</a
       >
       <br />
-      Durante curso da Alura- <a href="">Certificado</a>
+      Durante curso da Alura-
+      <a
+        href="https://cursos.alura.com.br/certificate/pedroxaviercoelho/javascript-web-paginas-dinamicas"
+        target="_blank"
+        >Certificado</a
+      >
     </footer>
   </body>
 </html>
